Fix overflow

--- a/client/src/app/shared/shared-video-miniature/video-filters-header.component.scss
+++ b/client/src/app/shared/shared-video-miniature/video-filters-header.component.scss
@@ -25,6 +25,8 @@ $filters-background: pvar(--bg-secondary-400);
 }
 
 .section {
+  min-width: 1px;
+
   @include margin-right(3rem);
 }
 
